--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,14 @@
                 android:src="@drawable/ic_whatshot_black_24dp" />
 
             <ImageButton
+                android:id="@+id/home_vi"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/mo"
+                />
+
+            <ImageButton
                 android:id="@+id/home_btn_food"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -169,6 +177,7 @@
 
         </LinearLayout>
 
+
         <TextView
 
             android:id="@+id/txtsp"
@@ -177,8 +186,8 @@
             android:layout_margin="10dp"
             android:elevation="5dp"
             android:text="Danh Sách Sản Phẩm"
-            android:textColor="@color/purple_200"
-            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textSize="19sp"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -187,49 +196,33 @@
             android:layout_height="230dp"
             />
 
-        <TextView
-            android:layout_marginTop="-10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+<!--        <TextView-->
+<!--            android:layout_marginTop="-10dp"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
 
-            android:elevation="5dp"
-            android:text="Sản Phẩm Nổi Bật"
-            android:textColor="@color/purple_200"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+<!--            android:elevation="5dp"-->
+<!--            android:text="Sản Phẩm Nổi Bật"-->
+<!--            android:textColor="@color/purple_200"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold" />-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvNB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:elevation="5dp"
-            android:layout_marginTop="-10dp"
-            android:text="Bạn ơi đặt món ngay đi"
-            android:textColor="@color/purple_200"
-            android:layout_marginBottom="2dp"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-        <LinearLayout
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:elevation="5dp"-->
+<!--            android:layout_marginTop="-10dp"-->
+<!--            android:text="Bạn ơi đặt món ngay đi"-->
+<!--            android:textColor="@color/purple_200"-->
+<!--            android:layout_marginBottom="2dp"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold" />-->
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_marginLeft="5dp"
-                android:layout_width="190dp"
-                android:layout_height="120dp"
-                android:background="@drawable/banner1"/>
-            <ImageView
-                android:layout_marginLeft="5dp"
-                android:layout_width="190dp"
-                android:layout_height="120dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/banner2"/>
-
-        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -237,8 +230,8 @@
             android:layout_marginTop="3dp"
             android:elevation="5dp"
             android:text="Thức uống đa dạng cho bạn chọn"
-            android:textColor="@color/purple_200"
-            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -246,14 +239,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <ImageView
-            android:layout_marginTop="-10dp"
-            android:layout_width="370dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/com"
-            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvHQ"
             android:layout_width="match_parent"
@@ -268,28 +254,12 @@
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="-10dp"
-            android:text="gợi ý list cho bạn nè!"
-            android:textColor="#c0c0c0"
-            android:textSize="16sp"
-            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvMC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <ImageView
-            android:layout_width="370dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/flashs"
-            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -320,37 +290,12 @@
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="-10dp"
-            android:text="gợi ý list cho bạn nè!"
-            android:textColor="#c0c0c0"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvLau"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <ImageView
-            android:layout_width="380dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="10dp"
-            android:paddingRight="-200dp"
-            android:background="@drawable/kem1"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:elevation="5dp"
-            android:text="Gợi ý thêm các món ngon tại nhà hàng Thanh Nhàn"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvGY"
