--- a/app/src/main/res/layout/dong_giohang.xml
+++ b/app/src/main/res/layout/dong_giohang.xml
@@ -37,17 +37,38 @@
             android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <TextView
-
-            android:padding="10dp"
-            android:textColor="#008000"
-            android:textSize="18sp"
-            android:text="1"
-            android:id="@+id/txtsoluong"
-            android:maxLines="1"
-            android:singleLine="true"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/addquantity"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/plus"
+                android:layout_marginTop="11dp"/>
+
+            <TextView
+
+                android:id="@+id/txtsoluong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:text="1"
+                android:textColor="#008000"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:id="@+id/minusquantity"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/minus"
+                android:layout_marginTop="11dp"/>
+        </LinearLayout>
+
         <TextView
 
             android:padding="10dp"
